# azcopy-shuffle

./: pyproject.toml
azcopy_shuffle/: shuffler.py
tests/: test_shuffler.py
