[tool.poetry]
name = "azcopy-shuffle"
version = "0.1.0"
description = ""
authors = ["alex carvalho <alex.carvaho.data@gmail.com>"]
readme = "README.md"
packages = [{include = "azcopy_shuffle"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
